# Nubix

./: .gitignore  CHANGELOG.md  README.md  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
nubix/: __init__.py  app.py  constants.py  exceptions.py
nubix/core/: __init__.py  bandwidth_controller.py  config_manager.py  credential_vault.py  file_watcher.py  mount_manager.py  rclone_engine.py  rclone_parser.py  remote_registry.py  scheduler.py  sync_job.py  sync_manager.py  updater.py
nubix/providers/: __init__.py  base_provider.py  dropbox.py  google_drive.py  nextcloud.py
nubix/resources/: __init__.py
nubix/resources/styles/: main.qss
nubix/ui/: __init__.py  main_window.py  system_tray.py  theme.py  update_dialog.py
nubix/ui/dashboard/: __init__.py  dashboard_widget.py  progress_panel.py  sync_status_card.py  transfer_rate_widget.py
nubix/ui/logs/: __init__.py  log_viewer.py
nubix/ui/settings/: __init__.py  bandwidth_tab.py  general_tab.py  remotes_tab.py  scheduler_tab.py  settings_dialog.py  update_tab.py
nubix/ui/widgets/: __init__.py  animated_spinner.py  collapsible_section.py  icon_button.py  status_badge.py
nubix/ui/wizard/: setup_wizard.py
nubix/ui/wizard/pages/: __init__.py  auth_page.py  confirmation_page.py  local_folder_page.py  provider_select_page.py  sync_mode_page.py  welcome_page.py
packaging/: nubix.desktop  nubix.service
scripts/: install_rclone.sh
tests/: conftest.py
tests/core/: test_config_manager.py  test_rclone_engine.py  test_rclone_parser.py  test_sync_manager.py  test_time_window.py
